# learn-rust-sqlx

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20231120094044_create_user.sql
src/: main.rs
